lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:1: error: not found: type segment
var segmentPose = new segment(new Point(0,0), new Point(1,0))
                      ^Lander:47: error: not found: value setAngle
		setAngle(-30)
                ^Lander:52: error: not found: value setAngle
		setAngle(30)
                ^